# findContiguousRegion

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt
cli/src/: maincli.cpp
lib/: CMakeLists.txt
lib/inc/: findcontiguousregion.h
lib/src/: findcontiguousregion.cpp
